--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,7 @@
             </div>
             <div class="form-buttons">
                 <button class="button" type="submit">Войти</button>
-                <a class="button" href="/admin_user_create">Зарегестрироваться</a>
+                <a class="button" href="/registration">Зарегестрироваться</a>
             </div>
         </form>
     </div>
