--- a/templates/admin/admin-header.html
+++ b/templates/admin/admin-header.html
@@ -6,7 +6,7 @@
     <nav class="header__nav">
         <ul class="nav__ul">
             <li class="nav__li">
-                <a href="#" class="logout nav__a">Выйти</a>
+                <a href="/logout" class="logout nav__a">Выйти</a>
             </li>
         </ul>
     </nav>
