--- a/templates/admin/kitchen-form.html
+++ b/templates/admin/kitchen-form.html
@@ -3,7 +3,7 @@
 {% from 'admin/admin-header.html' import admin_nav, admin_logo %}
 
 {% block styles %}
-     <link rel="stylesheet" href="{{ url_for('static', 'css/login.css') }}">
+     <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
 {% endblock %}
 
 {% block logo %}
@@ -18,13 +18,14 @@
         <div class="main__form">
             {% if kitchen %}
                 <h1>Редактировать аккаунт кухни</h1>
+                <form action="/admin/user/update/{{ kitchen.id }}" method="post">
             {% else %}
                 <h1>Создать аккаунт кухни</h1>
+                <form action="/admin/user/create/{{ role }}" method="post">
             {% endif %}
-          <form action="" method="post">
             <div class="form-component">
               <label for="login">Логин</label>
-              <input type="text" name="login" placeholder="Login" id="login" value="{% if kitchen.login %}{{ kitchen.login }}{% endif %}" />
+              <input type="text" name="login" placeholder="Login" id="login" value="{% if kitchen %}{{ kitchen.login }}{% endif %}" />
             </div>
             <div class="form-component">
               <label for="password">Пароль</label>
