--- a/templates/registrate.html
+++ b/templates/registrate.html
@@ -17,7 +17,7 @@
 {% block content %}
         <div class="main__form">
           <h1>Регистрация</h1>
-          <form action="/login" method="post">
+          <form action="/registration" method="post">
             <div class="form-component">
               <label for="lastname">Фамилия</label>
               <input
