--- a/templates/manager/ingridients-form.html
+++ b/templates/manager/ingridients-form.html
@@ -11,7 +11,7 @@
     <nav class="header__nav">
         <ul class="nav__ul">
             <li class="nav__li">
-                <a href="/" class="nav__a">Заказы</a>
+                <a href="/manager/goods" class="nav__a">Заказы</a>
             </li>
             <li class="nav__li">
                 <span class="nav__a__active">Блюда</span>
