--- a/templates/manager/ingridients-form.html
+++ b/templates/manager/ingridients-form.html
@@ -27,23 +27,31 @@
     {{ admin_logo() }}
 {% endblock %}
 
+{% block script %}
+    {% if not ingridient %}
+        <script src="{{ url_for('static', filename='js/ingridients-create.js') }}"></script>
+    {% endif %}
+{% endblock %}
+
 {% block content %}
     <div class="main__form">
         <h1>Добавить ингридиенты</h1>
         {% if not ingridient %}
-        <button id="make-field" class="button">Добавить поле ввода</button>
+            <button id="make-field" class="button">Добавить поле ввода</button>
         {% endif %}
-        <form method="POST">
-            <div class=".form-component">
-                <label for="title">Название ингридиента</label>
-                <input id="title" name="title" value="{% if ingridient %}{{ ingridient.title }}{% endif %}"
-                       placeholder="Лосось">
-            </div>
-        </form>
-        {% if ingridient %}
+        <div class="forms">
+            <form method="POST">
+                <div class="form-component">
+                    <label for="title">Название ингридиента</label>
+                    <input id="title" name="title" value="{% if ingridient %}{{ ingridient.title }}{% endif %}"
+                           placeholder="Лосось">
+                </div>
+            </form>
+        </div>
+        {% if not ingridient %}
             <button id="send" class="button">Создать</button>
         {% else %}
-            <button id="send" class="button">Сохранить</button>
+            <button id="send1" class="button">Сохранить</button>
         {% endif %}
     </div>
 {% endblock %}
