--- a/templates/index.html
+++ b/templates/index.html
@@ -11,17 +11,6 @@
         <ul class="nav__ul">
             <li class="nav__li cart">
                 <i class="bi bi-cart4"></i>
-                <div class="cart-contains">
-                    <div id="goods_1" class="cart-element row row-cols-2">
-                        <div class="col-5">
-                            <h4 class="cart-title">123 </h4>
-                            <p class="cart-info"><span class="info">Цена:</span> 123</p>
-                        </div>
-                        <div class="col-1">
-                            <button class="button"><i class="bi bi-trash-fill"></i></button>
-                        </div>
-                    </div>
-                </div>
             </li>
             <li class="nav__li">
                 <a href="#" class="logout nav__a">Выйти</a>
@@ -38,8 +27,8 @@
     <div class="good-cards">
         {% for good in goods %}
             <div id="{{ good.id }}" class="good-card">
-                <div class="good-card-image">
-                    <img src="{{ good.photo_URL }}" alt="Филадельфия"/>
+                <div  class="good-card-image">
+                    <img id="{{ good.id }}" src="{{ good.photo_URL }}" alt="Филадельфия"/>
                 </div>
                 <div class="good-card-description">
                     <div class="name">
