--- a/templates/static/css/good-cards.css
+++ b/templates/static/css/good-cards.css
@@ -56,3 +56,27 @@
   box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
   transition: ease-in-out 0.5s;
 }
+
+.cart-contains {
+  background-color: #fbecdd;
+  width: 500px;
+  position: absolute;
+  position: relative;
+  right: 40px;
+  position: absolute;
+  font-size: 0.5em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 20px;
+  border-bottom: 1px solid #f78575;
+  box-sizing: border-box;
+  z-index: 20000;
+}
+
+.cart-element {
+  width: 100%;
+  background-color: #fbecdd;
+  box-sizing: border-box;
+}
