--- a/templates/make-order.html
+++ b/templates/make-order.html
@@ -33,10 +33,15 @@
 
             </ul>
         </div>
+        <div class="price"><span class="info">Цена</span> <span class="total-price"></span></div>
         <form action="" method="post">
             <div class="form-component">
-                <label for="login">Введите </label>
-                <input type="text" name="address-to" placeholder="Login" id="login"/>
+                <label for="login">Введите адрес доставки</label>
+                <input type="text" name="address-to" placeholder="ул. Пушкина, д. Колотушкина, кв. 78" id="login"/>
+            </div>
+            <div class="form-component">
+                <label for="comment">Комментарий к заказу</label>
+                <textarea type="" name="comment" placeholder="Ваш коментарий..." id="comment" rows="5" cols="33"></textarea>
             </div>
             <div class="form-buttons">
                 <button class="button" id="make-order">Оформить</button>
