--- a/templates/manager/ingridients-form.html
+++ b/templates/manager/ingridients-form.html
@@ -17,7 +17,7 @@
                 <span class="nav__a__active">Блюда</span>
             </li>
             <li class="nav__li">
-                <a href="#" class="logout nav__a">Выйти</a>
+                <a href="/logout" class="logout nav__a">Выйти</a>
             </li>
         </ul>
     </nav>
