--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                 <i class="bi bi-cart4"></i>
             </li>
             <li class="nav__li">
-                <a href="#" class="logout nav__a">Выйти</a>
+                <a href="/logout" class="logout nav__a">Выйти</a>
             </li>
         </ul>
     </nav>
