--- a/templates/kitchen/index.html
+++ b/templates/kitchen/index.html
@@ -3,7 +3,7 @@
 {% from 'admin/admin-header.html' import admin_logo, admin_nav %}
 
 {% block styles %}
-    <link rel="stylesheet" href="{{ url_for('static', 'css/kitchen.css') }}"/>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/kitchen.css') }}"/>
 {% endblock %}
 
 {% block logo %}
