redisign manager index

--- a/templates/static/css/manager.css
+++ b/templates/static/css/manager.css
@@ -31,3 +31,12 @@
   flex-direction: column;
   gap: 30px;
 }
+
+.check {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.check.active {
+  text-decoration: none;
+}
