--- a/templates/courier/index.html
+++ b/templates/courier/index.html
@@ -48,7 +48,7 @@
                     <div class="order-info">
                         <div class="user-phone">
                             <span class="info">Номер клиента:</span>
-                            <a href="tel:+78005553535">{{ order.users.phone_number }}</a>
+                            <a href="tel:+78005553535">{{ order.user.phone_number }}</a>
                         </div>
                         <div class="from-address">
                             <span class="info">Откуда:</span> {{ order.order.delivery_from_address }}
